06/14/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added the EditAction class for future actions in jsXe.
      The messages, menu mnemonics, and tooltips will be able to be
      localized and the shortcuts will be able to be set via the
      InputManager.

06/13/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added the InputManager for maintaining the key bindings for actions in
      jsXe.
    * Updated the param string for PropertyChanged messages.
    * Moved the general options pane to it's own file.

06/08/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added a PropertyChanged event for when one of jsXe's properties changes.
    * Updated lots of javadoc
    * jsXe's global options now implements AbstractOptionPane

06/07/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Updated the document options to use abstract classes to lay out the
      dialog. OptionsPanel is now deprecated in favor of using the OptionPane
      and AbstractOptionPane classes.
    * Updated dialogs to use setVisible() instead of show()

06/06/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added a new Document Options Dialog which handles settings on a per
      document basis.
    * Updated the Global Options so that they don't include the per document
      options anymore.
    * Updated the DirtyFilesDialog so that it selects the first entry by
      default.
    * Updated EnhancedDialogs to be resizable by default.
    * Updated the file dialog to use localized messages in the title

05/31/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * All plugins now implement EBListener and are added to the EditBus
    * Updated the use of EditBus messages

05/24/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Updated the minimum version of xerces needed to run jsXe to 2.8.
      Previously jsXe had been checking for 2.7
    * Added a status bar to jsXe. This can be used in the future to show info
      and messages to the user and can be used by plugins.